--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
-  }
+  },
+  "description": "Tutorial \"Local Library\" website written in in Node/Express.",
+  "main": "app.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
